--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -34,7 +34,7 @@ jobs:
       # no tag
       -
         if: "!startsWith(github.ref, 'refs/tags/')"
-        uses: danharrin/monorepo-split-github-action@v2.3
+        uses: "symplify/monorepo-split-github-action@2.1"
         with:
           # ↓ split "packages/easy-coding-standard" directory
           package_directory: 'packages/${{ matrix.package.path }}'
@@ -46,7 +46,7 @@ jobs:
       # with tag
       -
         if: "startsWith(github.ref, 'refs/tags/')"
-        uses: danharrin/monorepo-split-github-action@v2.3
+        uses: "symplify/monorepo-split-github-action@2.1"
         with:
           tag: ${GITHUB_REF#refs/tags/}
 
