--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -31,6 +31,11 @@ jobs:
     steps:
       -   uses: actions/checkout@v3
 
+      - name: Mark github workspace as safe
+        run: |
+          git config --global --add safe.directory /github/workspace
+          git config --global --add safe.directory /tmp/monorepo_split/build_directory
+
       # no tag
       -
         if: "!startsWith(github.ref, 'refs/tags/')"
