--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -43,6 +43,11 @@ jobs:
           repository_organization: 'openmage-strict'
           repository_name: '${{ matrix.package.repo }}'
 
+
+          # ↓ the user signed under the split commit
+          user_name: "sreichel"
+          user_email: "github-sr@hotmail.com"
+
       # with tag
       -
         if: "startsWith(github.ref, 'refs/tags/')"
@@ -56,3 +61,7 @@ jobs:
           # ↓ into https://github.com/openmage-strict/<REPO> repository
           repository_organization: 'openmage-strict'
           repository_name: '${{ matrix.package.repo }}'
+
+          # ↓ the user signed under the split commit
+          user_name: "sreichel"
+          user_email: "github-sr@hotmail.com"
